# hyprharness

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix
docs/: tools.md
src/: audit.rs  capture.rs  cli.rs  error.rs  harness.rs  input.rs  ipc.rs  keyboard.rs  lib.rs  main.rs  mcp.rs  models.rs  policy.rs  sequence.rs
tests/: live_hyprland.rs
