[package]
name = "hyprharness"
version = "0.4.0"
edition = "2024"
description = "A safety-focused MCP computer-use server for Hyprland"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
rmcp = { version = "2.2", features = ["server", "transport-io", "macros"] }
schemars = { version = "1.0", features = ["chrono04"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[dev-dependencies]
tempfile = "3.0"
